[gd_scene load_steps=3 format=3 uid="uid://world_info_ui_123"]

[ext_resource type="Script" path="res://src/ui/world_info_ui.gd" id="1_script"]

[node name="WorldInfoUI" type="VBoxContainer"]
offset_right = 230.0
offset_bottom = 50.0
theme_override_constants/separation = 2.0
script = ExtResource("1_script")

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4.0
text = "Year 1, Day 1 - 08:00"

[node name="WeatherLabel" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4.0
theme_override_font_sizes/font_size = 14
text = "Weather: Sunny"

[node name="BiomeLabel" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4.0
theme_override_font_sizes/font_size = 14
text = "Biome: Forest"

[node name="TileLabel" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.901961, 0.4, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4.0
theme_override_font_sizes/font_size = 14
text = "Tile: None"
